--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -21,8 +21,11 @@ body {
     max-width: 75%;
   }
 
-  .navbar-nav,
   .navbar-toggler {
+    margin-top: 10px;
+  }
+
+  .navbar-nav {
     padding-top: 10px;
   }
 
@@ -44,3 +47,13 @@ h1 {
   margin: 0 auto;
   max-width: 75%;
 }
+
+@media (max-width: 767px) {
+  .navbar-toggleable-sm {
+    clear: both; }
+    .navbar-toggleable-sm .navbar-nav {
+      float: none !important; }
+    .navbar-toggleable-sm .navbar-nav .nav-item + .nav-item {
+      margin-left: 0; }
+    .navbar-toggleable-sm .navbar-nav .nav-item {
+      float: none; } }
