--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -39,21 +39,30 @@ body {
   
 }
 
-h1 {
-  font-family: SkyTextMedium;
-}
-
 .layout-content {
   margin: 0 auto;
   max-width: 75%;
 }
 
+.header-separator {
+  padding-top: 15px;
+}
+
+// Bootstrap4 header navbar float fix
 @media (max-width: 767px) {
   .navbar-toggleable-sm {
-    clear: both; }
-    .navbar-toggleable-sm .navbar-nav {
-      float: none !important; }
-    .navbar-toggleable-sm .navbar-nav .nav-item + .nav-item {
-      margin-left: 0; }
-    .navbar-toggleable-sm .navbar-nav .nav-item {
-      float: none; } }
+    clear: both; 
+  }
+    
+  .navbar-toggleable-sm .navbar-nav {
+    float: none !important; 
+  }
+    
+  .navbar-toggleable-sm .navbar-nav .nav-item + .nav-item {
+    margin-left: 0; 
+  }
+    
+  .navbar-toggleable-sm .navbar-nav .nav-item {
+    float: none; 
+  } 
+}
