--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -15,6 +15,10 @@ body {
   font-family: SkyTextRegular, Helvetica, Arial;
 }
 
+strong {
+  font-family: SkyTextMedium, Helvetica, Arial;
+}
+
 .layout-header {
 
   .container-fluid {
