--- a/app/assets/stylesheets/bills.scss
+++ b/app/assets/stylesheets/bills.scss
@@ -1,5 +1,4 @@
 .bill-container {
-  background: white;
   margin-top: 20px;
 }
 
@@ -28,7 +27,11 @@
   100% { transform: rotate(360deg); }
 }
 
-@media (min-width: 767px){
+#total.total-calls {
+  padding: 0.5rem 0;
+}
+
+@media (min-width: 900px){
   .bill-container {
     font-size: 1.5em;
   }
