--- a/app/views/vue_templates/_calls_breakdown.html.haml
+++ b/app/views/vue_templates/_calls_breakdown.html.haml
@@ -1,6 +1,6 @@
 %template#calls-breakdown
   .container.bill-container
-    .row
+    .container
       #total.total-calls.col-xs-6
         Total amount: 
         %strong {{data.total | displayDecimals}}
