--- a/app/views/vue_templates/_calls_breakdown.html.haml
+++ b/app/views/vue_templates/_calls_breakdown.html.haml
@@ -1,7 +1,7 @@
 %template#calls-breakdown
   .container.bill-container
     .container
-      #total.total-calls.col-xs-6
+      #total.total-amount.col-xs-6
         Total amount: 
         %strong {{data.total | displayDecimals}}
       .col-xs-6
